[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "grscheller-courses-pet-images"
authors = [
    { name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = []
dynamic = ["version", "description"]
keywords = [
    "udacity",
    "pytorch",
    "pets",
    "pet images"
]

[project.optional-dependencies]
test = ["pytest >=7.4"]

[project.urls]
Source = "https://github.com/grscheller/courses-pet-images"
Documentation = "https://grscheller.github.io/courses-pet-images"

[tool.flit.sdist]
exclude = [
    ".pytest_cache",
    ".mypy_cache"
]

[tool.pylsp-mypy]
live-mode = true
strict = true
report_progress = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
